# pp-pkglib

./: .gitignore  .hgignore  .project  .pydevproject  LICENSE.txt  setup.cfg  setup.py
docs/: index.rst
pp/: __init__.py
pp/pkglib/: metadata.py  multipkg.py  osutil.py  pavement.py  vcs.py
pp/pkglib/scripts/: tagup.py
pp/pkgutils/: metadata.py  osutil.py  pavement.py  vcs.py
pp/pkgutils/scripts/: find_includes.sh  tagup.py
tests/: test_import.py
