[metadata]
name = pp-pkgutils
version = 0.1.0
summary = Package and release tools
download_url = UNKNOWN
home_page = http://
author = Edward Easton
author_email = edward.easton@pythonpro.co.uk
classifier = Development Status :: 3 - Alpha
licence = Commercial, All Rights Reserved

[files]
packages = pp
    pp.pkgutils
    pp.pkgutils.scripts

resources =

